--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Installer site with node.js,express,social_login,react,mongodb",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon --exec babel-node ./src/server.js"
+    "server": "nodemon --exec babel-node ./src/init.js"
   },
   "keywords": [
     "Installer"
