--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
