--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@babel/core": "^7.18.0",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.0",
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.1",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16",
-    "bcrypt": "^5.0.1"
+    "nodemon": "^2.0.16"
   }
 }
