--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.1",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16"
   }
 }
